System theme not applied correctly
Categories
(Core :: Widget: Gtk, defect, P3)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr115 | --- | unaffected |
| firefox122 | --- | verified |
| firefox123 | --- | verified |
| firefox124 | --- | verified |
People
(Reporter: macca, Assigned: emilio)
References
(Regression)
Details
(Keywords: regression)
Attachments
(4 files)
|
19.19 KB,
image/png
|
Details | |
|
8.60 KB,
image/png
|
Details | |
|
48 bytes,
text/x-phabricator-request
|
pascalc
:
approval-mozilla-beta+
dmeehan
:
approval-mozilla-release+
|
Details | Review |
|
186.22 KB,
image/png
|
Details |
User Agent: Mozilla/5.0 (X11; Ubuntu; Linux x86_64; rv:122.0) Gecko/20100101 Firefox/122.0
Steps to reproduce:
Ubuntu 22.04
Firefox Snap
Yaru-remix theme (bright content with dark title bars).
Actual results:
The title bar colors are not applied correctly.
Possibly also other part of the UI are not correct (can't fully verify).
Expected results:
See screenshots for a comparison.
| Reporter | ||
Comment 1•2 years ago
|
||
Comment 2•2 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Core::Widget: Gtk' component, and is moving the bug to that component. Please correct in case you think the bot is wrong.
| Assignee | ||
Comment 3•2 years ago
|
||
Ah this would be a regression from bug 1869299, will take a look.
Updated•2 years ago
|
| Assignee | ||
Updated•2 years ago
|
| Assignee | ||
Comment 4•2 years ago
|
||
Updated•2 years ago
|
Comment 6•2 years ago
|
||
Emilio, could you please assign Priority/Severity ratings to this report when you get a chance?
| Assignee | ||
Updated•2 years ago
|
Comment 7•2 years ago
|
||
| bugherder | ||
Comment 8•2 years ago
|
||
The patch landed in nightly and beta is affected.
:emilio, is this bug important enough to require an uplift?
- If yes, please nominate the patch for beta approval.
- If no, please set
status-firefox123towontfix.
For more information, please visit BugBot documentation.
| Assignee | ||
Comment 9•2 years ago
|
||
Comment on attachment 9376913 [details]
Bug 1877002 - Detect the yaru-remix theme, to avoid applying the yaru overrides there. r=stransky
Beta/Release Uplift Approval Request
- User impact if declined: comment 0
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: comment 0 (needs a custom gtk theme)
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Relatively simple patch.
- String changes made/needed: none
- Is Android affected?: No
| Assignee | ||
Updated•2 years ago
|
Comment 10•2 years ago
|
||
Comment on attachment 9376913 [details]
Bug 1877002 - Detect the yaru-remix theme, to avoid applying the yaru overrides there. r=stransky
Approved for 123 beta 5, thanks.
Comment 11•2 years ago
|
||
| uplift | ||
Comment 12•2 years ago
|
||
| bugherder uplift | ||
Comment 13•2 years ago
|
||
:emilio what about adding a release uplift request on this?
We have a scheduled Fx122 dot release that builds on 2024-02-05. If this can be included or it should ride the train with Fx123.
| Assignee | ||
Comment 14•2 years ago
|
||
Comment on attachment 9376913 [details]
Bug 1877002 - Detect the yaru-remix theme, to avoid applying the yaru overrides there. r=stransky
Beta/Release Uplift Approval Request
- User impact if declined: see above
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: Yes
- If yes, steps to reproduce: See above
- List of other uplifts needed: none
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): Trivial patch.
- String changes made/needed: none
- Is Android affected?: No
Updated•2 years ago
|
Comment 15•2 years ago
|
||
I can't seem to reproduce your issue with Nightly v122.0a1 from 2023-12-13 or Beta v122.0b4 archive builds and neither in 122.0 (64-bit) Snap in Ubuntu 22. I've tested the issue using the following theme:
https://addons.mozilla.org/en-US/firefox/addon/ubuntu-yaru/?utm_source=addons.mozilla.org&utm_medium=referral&utm_content=search
If a different theme reproduces this issue, please provide the exact one. Thank you!
| Reporter | ||
Comment 16•2 years ago
|
||
I've installed everything a long time ago, hope to remember the steps.
First, Ubuntu 22.04 with the Yaru-remix installed in the user's .themes folder, if I remember correctly I extracted the content from a previous Ubuntu release (21.10 maybe) because Ubuntu dropped the Yaru-remix with 22.04 (not sure if this is relevant).
Installed yaru-remix-themes snap:
yaru-remix-themes 21.04.1 11 latest/stable muqtxdir-m -
Connected the firefox snap to the theme as posted here https://snapcraft.io/yaru-remix-themes
content[gtk-3-themes] firefox:gtk-3-themes yaru-remix-themes:gtk-3-themes manual
content[gtk-3-themes] snap-store:gtk-3-themes yaru-remix-themes:gtk-3-themes manual
| Assignee | ||
Updated•2 years ago
|
Comment 17•2 years ago
|
||
I am unable to install the Yaru-remix theme because I do not have access to the themes folder (~/.themes (or) /usr/share/themes). All other install methods seem to fail. This being said, I cannot verify this fix on restricted systems.
Marco, Would you be able to confirm that your issue no longer occurs in the latest Nightly v124.0a1 and/or Beta v123.0b5 (or later builds)?
Thank you very much for your contribution!
| Reporter | ||
Comment 18•2 years ago
|
||
Tried the beta 123.0b5, looks good to me.
Also tested switching themes and are applied correctly.
Thank you.
Comment 19•2 years ago
|
||
Comment on attachment 9376913 [details]
Bug 1877002 - Detect the yaru-remix theme, to avoid applying the yaru overrides there. r=stransky
Approved for 122.0.1
Comment 20•2 years ago
|
||
| uplift | ||
Updated•2 years ago
|
Comment 21•2 years ago
|
||
Setting 123 branch as verified based on comment 18.
Comment 22•2 years ago
•
|
||
Reproduced the issue on Ubuntu 22.04 with Firefox 122.0 Snap package by using the Yaru-remix theme installed inside Gnome Tweaks and then following this tutorial: https://store.kde.org/p/1384810. After activating the Yaru-remix theme on Snap using the commands from the comment 16 link the Firefox Snap will have a white tab bar instead of a dark one and browser buttons will be barely visible.
The issue is verified fixed on Ubuntu 22.04 and Ubuntu 20.04 with Firefox Snap 122.0.1, 123.0b6 and 124.0a1 (2023-02-05). The Yaru-remix theme is correctly applied for the tab bar.
Description
•