Bug 1877002 - Detect the yaru-remix theme, to avoid applying the yaru overrides there. r=stransky

Differential Revision: https://phabricator.services.mozilla.com/D199854